--- a/S&F-Hub/CodiFont/vista/Loggin.fxml
+++ b/S&F-Hub/CodiFont/vista/Loggin.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="controlador.ControladorLoggin">
    <children>
       <AnchorPane layoutX="-30.0" layoutY="-12.0" prefHeight="540.0" prefWidth="575.0">
          <children>
@@ -17,12 +17,12 @@
                   <Font name="Berlin Sans FB" size="22.0" />
                </font>
             </Label>
-            <Label id="lblUsuario" layoutX="275.0" layoutY="171.0" text="Usuario" />
-            <Label id="lblContraseña" layoutX="265.0" layoutY="262.0" text="Contraseña" />
-            <PasswordField id="passwordContraseña" layoutX="221.0" layoutY="303.0" />
-            <TextField id="txtUsuario" layoutX="221.0" layoutY="200.0" />
-            <Button id="btnIniciarSesion" layoutX="343.0" layoutY="376.0" mnemonicParsing="false" text="Iniciar Sesion" />
-            <Button id="btnRegistrarse" layoutX="207.0" layoutY="376.0" mnemonicParsing="false" text="Registrarse" />
+            <Label fx:id="lblUsuario" layoutX="275.0" layoutY="171.0" text="Usuario" />
+            <Label fx:id="lblContraseña" layoutX="265.0" layoutY="262.0" text="Contraseña" />
+            <PasswordField fx:id="passwordContraseña" layoutX="221.0" layoutY="303.0" />
+            <TextField fx:id="txtUsuario" layoutX="221.0" layoutY="200.0" />
+            <Button fx:id="btnIniciarSesion" layoutX="343.0" layoutY="376.0" mnemonicParsing="false" text="Iniciar Sesion" />
+            <Button fx:id="btnRegistrarse" layoutX="207.0" layoutY="376.0" text="Registrarse" />
          </children>
       </AnchorPane>
    </children>
