--- a/S&F-Hub/CodiFont/vista/Loggin.fxml
+++ b/S&F-Hub/CodiFont/vista/Loggin.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="controlador.ControladorLoggin">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.ControladorLoggin">
    <children>
-      <AnchorPane layoutX="-30.0" layoutY="-12.0" prefHeight="540.0" prefWidth="575.0">
+      <AnchorPane prefHeight="540.0" prefWidth="575.0">
          <children>
             <Label layoutX="259.0" layoutY="106.0" prefHeight="33.0" prefWidth="73.0" text="Loggin">
                <font>
@@ -23,6 +22,11 @@
             <TextField fx:id="txtUsuario" layoutX="221.0" layoutY="200.0" />
             <Button fx:id="btnIniciarSesion" layoutX="343.0" layoutY="376.0" mnemonicParsing="false" text="Iniciar Sesion" />
             <Button fx:id="btnRegistrarse" layoutX="207.0" layoutY="376.0" text="Registrarse" />
+            <Label fx:id="lblError" alignment="CENTER" contentDisplay="CENTER" layoutX="170.0" layoutY="433.0" prefHeight="51.0" prefWidth="251.0" textFill="RED">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
