--- a/S&F-Hub/CodiFont/vista/Loggin.fxml
+++ b/S&F-Hub/CodiFont/vista/Loggin.fxml
@@ -9,20 +9,32 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.ControladorLoggin">
    <children>
-      <AnchorPane prefHeight="540.0" prefWidth="575.0">
+      <AnchorPane prefHeight="606.0" prefWidth="819.0">
          <children>
-            <Label layoutX="259.0" layoutY="106.0" prefHeight="33.0" prefWidth="73.0" text="Loggin">
+            <Label alignment="CENTER" layoutX="346.0" layoutY="64.0" prefHeight="66.0" prefWidth="108.0" text="Loggin">
                <font>
-                  <Font name="Berlin Sans FB" size="22.0" />
+                  <Font name="Berlin Sans FB" size="36.0" />
                </font>
             </Label>
-            <Label fx:id="lblUsuario" layoutX="275.0" layoutY="171.0" text="Usuario" />
-            <Label fx:id="lblContraseña" layoutX="265.0" layoutY="262.0" text="Contraseña" />
-            <PasswordField fx:id="passwordContraseña" layoutX="221.0" layoutY="303.0" />
-            <TextField fx:id="txtUsuario" layoutX="221.0" layoutY="200.0" />
-            <Button fx:id="btnIniciarSesion" layoutX="343.0" layoutY="376.0" mnemonicParsing="false" text="Iniciar Sesion" />
-            <Button fx:id="btnRegistrarse" layoutX="207.0" layoutY="376.0" text="Registrarse" />
-            <Label fx:id="lblError" alignment="CENTER" contentDisplay="CENTER" layoutX="170.0" layoutY="433.0" prefHeight="51.0" prefWidth="251.0" textFill="RED">
+            <Label fx:id="lblUsuario" layoutX="364.0" layoutY="166.0" text="Usuario">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <Label fx:id="lblContraseña" layoutX="354.0" layoutY="277.0" text="Contraseña">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <PasswordField fx:id="passwordContraseña" layoutX="325.0" layoutY="314.0" />
+            <TextField fx:id="txtUsuario" layoutX="325.0" layoutY="210.0" />
+            <Button fx:id="btnIniciarSesion" layoutX="430.0" layoutY="386.0" mnemonicParsing="false" text="Iniciar Sesion">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <Button fx:id="btnRegistrarse" layoutX="281.0" layoutY="386.0" text="Registrarse">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <Label fx:id="lblError" alignment="CENTER" contentDisplay="CENTER" layoutX="274.0" layoutY="463.0" prefHeight="51.0" prefWidth="251.0" textFill="RED">
                <font>
                   <Font size="14.0" />
                </font>
