--- a/S&F-Hub/CodiFont/vista/Registrarse.fxml
+++ b/S&F-Hub/CodiFont/vista/Registrarse.fxml
@@ -10,37 +10,37 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.ControladorRegistrarse">
    <children>
-      <AnchorPane prefHeight="575.0" prefWidth="662.0">
+      <AnchorPane prefHeight="606.0" prefWidth="819.0">
          <children>
-            <Label alignment="CENTER" layoutX="331.0" layoutY="71.0" prefHeight="72.0" prefWidth="204.0" text="Registrar Usuario" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
+            <Label alignment="CENTER" layoutX="402.0" layoutY="74.0" prefHeight="72.0" prefWidth="204.0" text="Registrar Usuario" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label layoutX="27.0" layoutY="71.0" prefHeight="63.0" prefWidth="117.0" text="S&amp;F Hub">
+            <Label layoutX="75.0" layoutY="78.0" prefHeight="63.0" prefWidth="117.0" text="S&amp;F Hub">
                <font>
                   <Font name="Baskerville Old Face" size="25.0" />
                </font>
             </Label>
-            <Label fx:id="lblNuwvoUsuario" layoutX="144.0" layoutY="165.0" prefHeight="27.0" prefWidth="130.0" text="Nuevo Usuario">
+            <Label fx:id="lblNuwvoUsuario" layoutX="223.0" layoutY="167.0" prefHeight="27.0" prefWidth="130.0" text="Nuevo Usuario">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label fx:id="lblContraseña" layoutX="144.0" layoutY="327.0" prefHeight="26.0" prefWidth="105.0" text="Contraseña">
+            <Label fx:id="lblContraseña" layoutX="223.0" layoutY="329.0" prefHeight="26.0" prefWidth="105.0" text="Contraseña">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="txtUser" layoutX="342.0" layoutY="166.0" text="User" />
-            <TextField fx:id="txtEmail" layoutX="342.0" layoutY="221.0" text="E-Mail" />
-            <TextField fx:id="txtTelef" layoutX="342.0" layoutY="275.0" text="Telefono" />
-            <PasswordField fx:id="txtContra" layoutX="342.0" layoutY="328.0" />
-            <Label layoutX="342.0" layoutY="363.0" prefHeight="13.0" prefWidth="149.0" text="Repetir Contraseña" />
-            <PasswordField fx:id="txtRepetirContra" layoutX="342.0" layoutY="389.0" />
-            <CheckBox fx:id="checkPublicidad" layoutX="342.0" layoutY="438.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="130.0" text="Acepto publicidad" />
-            <CheckBox fx:id="checkPrivacidad" layoutX="342.0" layoutY="469.0" mnemonicParsing="false" text="Politica de privacidad" />
-            <Button fx:id="btnRegistrarse" layoutX="139.0" layoutY="422.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="149.0" text="Registrarse" />
+            <TextField fx:id="txtUser" layoutX="421.0" layoutY="168.0" promptText="Usuario" />
+            <TextField fx:id="txtEmail" layoutX="421.0" layoutY="223.0" promptText="E-Mail" />
+            <TextField fx:id="txtTelef" layoutX="421.0" layoutY="277.0" promptText="Teléfono" />
+            <PasswordField fx:id="txtContra" layoutX="421.0" layoutY="330.0" />
+            <Label layoutX="421.0" layoutY="365.0" prefHeight="13.0" prefWidth="149.0" text="Repetir Contraseña" />
+            <PasswordField fx:id="txtRepetirContra" layoutX="421.0" layoutY="391.0" />
+            <CheckBox fx:id="checkPublicidad" layoutX="421.0" layoutY="440.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="130.0" text="Acepto publicidad" />
+            <CheckBox fx:id="checkPrivacidad" layoutX="421.0" layoutY="471.0" mnemonicParsing="false" text="Política de privacidad" />
+            <Button fx:id="btnRegistrarse" layoutX="218.0" layoutY="424.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="149.0" text="Registrarse" />
             <Label fx:id="lblError" alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="144.0" layoutY="514.0" prefHeight="46.0" prefWidth="340.0" textFill="RED">
                <font>
                   <Font size="14.0" />
