--- a/S&F-Hub/CodiFont/vista/Inicio.fxml
+++ b/S&F-Hub/CodiFont/vista/Inicio.fxml
@@ -9,11 +9,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="502.0" prefWidth="662.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="606.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ComboBox layoutX="47.0" layoutY="42.0" prefWidth="150.0" />
       <Label layoutX="309.0" layoutY="46.0" text="INICIO" />
-      <TextField layoutX="430.0" layoutY="42.0" text="Busca tu serie" />
+      <TextField fx:id="txtBuscarSerie" layoutX="430.0" layoutY="42.0" text="Busca tu serie" />
       <ScrollBar layoutX="612.0" layoutY="42.0" orientation="VERTICAL" prefHeight="439.0" prefWidth="19.0" />
       <Label layoutX="34.0" layoutY="94.0" prefHeight="17.0" prefWidth="48.0" text="Mi Lista" />
       <ImageView fitHeight="68.0" fitWidth="107.0" layoutX="41.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true">
