--- a/S&F-Hub/CodiFont/vista/Inicio.fxml
+++ b/S&F-Hub/CodiFont/vista/Inicio.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -12,8 +14,13 @@
    <children>
       <AnchorPane layoutX="-20.0" layoutY="141.0" prefHeight="687.0" prefWidth="909.0">
          <children>
+            <ImageView fitHeight="92.0" fitWidth="135.0" layoutX="94.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../S-F-Hub-master/S&amp;F-Hub/CodiFont/Imagenes%20proyecto/Bob'sBurguer.jpg" />
+               </image>
+            </ImageView>
             <ScrollBar layoutX="791.0" orientation="VERTICAL" prefHeight="687.0" prefWidth="14.0" visible="false" />
-            <Button fx:id="btnSyP" layoutX="85.0" layoutY="33.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
+            <Button fx:id="btnSyP" layoutX="85.0" layoutY="33.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnSyP2" layoutX="250.0" layoutY="33.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnSyP3" layoutX="415.0" layoutY="33.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <ScrollBar layoutX="51.0" layoutY="163.0" prefHeight="14.0" prefWidth="858.0" />
@@ -40,5 +47,6 @@
       </Label>
       <TextField fx:id="txtBuscarSerie" layoutX="564.0" layoutY="87.0" prefHeight="25.0" prefWidth="172.0" promptText="Buscar Serie" />
       <Button fx:id="btnBuscarSerie" layoutX="700.0" layoutY="87.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="36.0" />
+      <Button fx:id="btnLista" layoutX="786.0" layoutY="87.0" mnemonicParsing="false" text="Crear Lista" />
    </children>
 </AnchorPane>
