--- a/S&F-Hub/CodiFont/vista/MiLista.fxml
+++ b/S&F-Hub/CodiFont/vista/MiLista.fxml
@@ -7,15 +7,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="606.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="606.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.ControladorMiLista">
    <children>
-      <ScrollBar layoutX="568.0" layoutY="14.0" orientation="VERTICAL" prefHeight="447.0" prefWidth="18.0" />
-      <Label layoutX="253.0" layoutY="72.0" prefHeight="32.0" prefWidth="94.0" text="MI LISTA">
+      <ScrollBar layoutX="776.0" layoutY="56.0" orientation="VERTICAL" prefHeight="447.0" prefWidth="18.0" />
+      <Label layoutX="363.0" layoutY="50.0" prefHeight="32.0" prefWidth="94.0" text="MI LISTA">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button layoutX="476.0" layoutY="31.0" mnemonicParsing="false" text="Nueva Lista" />
+      <Button layoutX="556.0" layoutY="31.0" mnemonicParsing="false" text="Nueva Lista" />
       <ComboBox layoutX="37.0" layoutY="31.0" prefWidth="150.0" />
+      <Button fx:id="btnVolver2" layoutX="693.0" layoutY="31.0" mnemonicParsing="false" text="Vovlver" />
    </children>
 </AnchorPane>
