--- a/S&F-Hub/CodiFont/vista/SoporteTc.fxml
+++ b/S&F-Hub/CodiFont/vista/SoporteTc.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="controlador.ControladorSoporteTc">
    <children>
       <Button layoutX="287.0" layoutY="351.0" mnemonicParsing="false" text="Enviar" />
       <ImageView depthTest="DISABLE" disable="true" fitHeight="109.0" fitWidth="157.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
@@ -34,5 +33,6 @@
       <TextField layoutX="183.0" layoutY="116.0" text="E-mail" />
       <TextArea layoutX="391.0" layoutY="143.0" prefHeight="233.0" prefWidth="181.0" />
       <ComboBox layoutX="92.0" layoutY="188.0" prefWidth="150.0" promptText="Problemas" />
+      <Button fx:id="btnVolver3" layoutX="484.0" layoutY="45.0" mnemonicParsing="false" text="Volver" />
    </children>
 </AnchorPane>
