--- a/S&F-Hub/CodiFont/vista/Loggin.fxml
+++ b/S&F-Hub/CodiFont/vista/Loggin.fxml
@@ -46,6 +46,7 @@
                   <Image url="@../../../../S-F-Hub-master/S&amp;F-Hub/CodiFont/Imagenes%20proyecto/Captura.PNG" />
                </image>
             </ImageView>
+            <Button fx:id="btnAdmin" layoutX="735.0" layoutY="561.0" mnemonicParsing="false" opacity="0.17" text="ADMIN" />
          </children>
       </AnchorPane>
    </children>
