--- a/S&F-Hub/CodiFont/vista/GraficosAdministrador.fxml
+++ b/S&F-Hub/CodiFont/vista/GraficosAdministrador.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -32,7 +33,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="lblError" alignment="TOP_LEFT" layoutX="44.0" layoutY="166.0" prefHeight="347.0" prefWidth="120.0" textAlignment="JUSTIFY" textFill="RED" wrapText="true" />
+            <Label fx:id="lblError" alignment="TOP_LEFT" layoutX="44.0" layoutY="166.0" prefHeight="213.0" prefWidth="120.0" textAlignment="JUSTIFY" textFill="RED" wrapText="true" />
             <BarChart fx:id="grfSeresBuscadas" layoutX="234.0" layoutY="291.0" prefHeight="261.0" prefWidth="509.0">
               <xAxis>
                 <CategoryAxis label="Nombre de las Series" side="BOTTOM" fx:id="xAxis" />
@@ -41,6 +42,11 @@
                 <NumberAxis fx:id="yAxis" label="Numero de usuarios" side="LEFT" />
               </yAxis>
             </BarChart>
+            <Button fx:id="btnRegistrarSP" layoutX="44.0" layoutY="409.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="120.0" text="Registrar S/P">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </children>
