--- a/S&F-Hub/CodiFont/vista/RegistrarPSAdministrador.fxml
+++ b/S&F-Hub/CodiFont/vista/RegistrarPSAdministrador.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="606.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="606.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.ControladorRegistrarPSAdministrador">
    <children>
       <TextField fx:id="txtTitulo" alignment="CENTER" layoutX="240.0" layoutY="14.0" prefHeight="85.0" prefWidth="339.0" promptText="Titulo">
          <font>
