--- a/S&F-Hub/CodiFont/vista/RegistrarPSAdministrador.fxml
+++ b/S&F-Hub/CodiFont/vista/RegistrarPSAdministrador.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -17,8 +18,7 @@
             <Font size="28.0" />
          </font>
       </TextField>
-      <ImageView fx:id="imgSP" fitHeight="114.0" fitWidth="168.0" layoutX="174.0" layoutY="167.0" pickOnBounds="true" preserveRatio="true" />
-      <Label contentDisplay="CENTER" layoutX="215.0" layoutY="112.0" prefHeight="42.0" prefWidth="61.0" text="img">
+      <Label contentDisplay="CENTER" layoutX="210.0" layoutY="99.0" prefHeight="42.0" prefWidth="61.0" text="img">
          <font>
             <Font size="24.0" />
          </font>
@@ -29,25 +29,25 @@
          </font>
       </Label>
       <TextArea fx:id="txtPlataformas" layoutX="146.0" layoutY="429.0" prefHeight="25.0" prefWidth="225.0" promptText="Separar por &quot;:&quot;" />
-      <Label layoutX="540.0" layoutY="112.0" prefHeight="42.0" prefWidth="109.0" text="Sinopsis">
+      <Label layoutX="541.0" layoutY="99.0" prefHeight="42.0" prefWidth="109.0" text="Sinopsis">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TextArea fx:id="txtSinopsis" layoutX="448.0" layoutY="167.0" prefHeight="106.0" prefWidth="225.0" promptText="Texto Sinopsis" />
-      <Label layoutX="561.0" layoutY="273.0" prefHeight="42.0" prefWidth="109.0" text="Reparto">
+      <TextArea fx:id="txtSinopsis" layoutX="448.0" layoutY="155.0" prefHeight="106.0" prefWidth="225.0" promptText="Texto Sinopsis" />
+      <Label layoutX="561.0" layoutY="261.0" prefHeight="42.0" prefWidth="109.0" text="Reparto">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TextArea fx:id="txtReparto" layoutX="448.0" layoutY="325.0" prefHeight="106.0" prefWidth="225.0" />
+      <TextArea fx:id="txtReparto" layoutX="448.0" layoutY="313.0" prefHeight="106.0" prefWidth="225.0" />
       <Slider fx:id="slivaloracion" layoutX="167.0" layoutY="523.0" max="10.0" prefHeight="42.0" prefWidth="157.0" value="5.0" />
       <Label layoutX="167.0" layoutY="474.0" prefHeight="50.0" prefWidth="124.0" text="Valoración">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="registrar" layoutX="541.0" layoutY="445.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="216.0" text="registrar Serie/Pelicula">
+      <Button fx:id="registrar" layoutX="541.0" layoutY="433.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="216.0" text="registrar Serie/Pelicula">
          <font>
             <Font size="18.0" />
          </font>
@@ -68,5 +68,8 @@
          </font>
       </Label>
       <TextField fx:id="txtGenero" alignment="TOP_LEFT" layoutX="146.0" layoutY="294.0" prefHeight="85.0" prefWidth="225.0" promptText="genero separado por &quot;:&quot;" />
+      <Button fx:id="btnImg" layoutX="179.0" layoutY="142.0" mnemonicParsing="false" text="Seleccionar img" />
+      <ImageView fx:id="imgSP" fitHeight="106.0" fitWidth="141.0" layoutX="159.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true" />
+      <ListView fx:id="listImg" layoutX="11.0" layoutY="141.0" prefHeight="42.0" prefWidth="132.0" />
    </children>
 </AnchorPane>
