--- a/LMSGI/PaginaWeb/css/PaginaP.css
+++ b/LMSGI/PaginaWeb/css/PaginaP.css
@@ -43,6 +43,7 @@ header .logotipo {
 	color: var(--rojo);
 	font-size: 60px;
 	text-align: right;
+	margin-top: 50px;
 }
 .menu{
 font-size: medium;
@@ -61,6 +62,7 @@ margin-bottom: 30px;
 
 }
 
+
 header nav a {
 	color: #AAA;
 	text-decoration: none;
@@ -70,6 +72,32 @@ header nav a {
 header nav a:hover,
 header nav a.activo {
 	color: #FFF;
+
+}
+.h1{
+
+margin-left: 20px;	
+}
+.texto1{
+margin-left: 180PX;
+
+
+}
+.h2{
+margin-left: 20px;	
+
+}
+.h3{
+	margin-top: 40px;
+	margin-left: 20px;	
+}
+.texto3{
+	margin-left: 180PX;
+}
+.texto4 {
+
+	margin-top: 10px;
+	margin-left: 180PX;
 
 }
 
