--- a/LMSGI/PaginaWeb/css2/style.css
+++ b/LMSGI/PaginaWeb/css2/style.css
@@ -1025,7 +1025,7 @@ hr{
 	padding-bottom: 4px;
 	font-size: 16px;
 	font-weight: 700;
-	color: #454545;
+	color: #ffff;
 }
 
 .form-content form .form-control {border-radius: 3px;}
