--- a/S&F-Hub/CodiFont/vista/Inicio2.fxml
+++ b/S&F-Hub/CodiFont/vista/Inicio2.fxml
@@ -16,26 +16,23 @@
          <children>
             <ImageView fitHeight="92.0" fitWidth="135.0" layoutX="94.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../S-F-Hub-master/S&amp;F-Hub/CodiFont/Imagenes%20proyecto/Bob'sBurguer.jpg" />
+                  <Image url="@img/Bob'sBurguer.jpg" />
                </image>
             </ImageView>
             <ScrollBar layoutX="791.0" orientation="VERTICAL" prefHeight="687.0" prefWidth="14.0" visible="false" />
             <Button fx:id="btnSyP" layoutX="85.0" layoutY="33.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnSyP2" layoutX="250.0" layoutY="33.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnSyP3" layoutX="415.0" layoutY="33.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <ScrollBar layoutX="51.0" layoutY="163.0" prefHeight="14.0" prefWidth="858.0" />
             <Button fx:id="btnSyP4" layoutX="581.0" layoutY="33.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnSyP5" layoutX="749.0" layoutY="33.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnSyP6" layoutX="85.0" layoutY="213.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnSyP7" layoutX="250.0" layoutY="213.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnSyP8" layoutX="415.0" layoutY="213.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <ScrollBar layoutX="51.0" layoutY="343.0" prefHeight="14.0" prefWidth="858.0" />
             <Button fx:id="btnSyP9" layoutX="581.0" layoutY="213.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnSyP10" layoutX="749.0" layoutY="213.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnSyP11" layoutX="85.0" layoutY="386.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnSyP12" layoutX="250.0" layoutY="386.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnSyP13" layoutX="415.0" layoutY="386.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <ScrollBar layoutX="51.0" layoutY="516.0" prefHeight="14.0" prefWidth="858.0" />
             <Button fx:id="btnSyP14" layoutX="581.0" layoutY="386.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnSyP15" layoutX="749.0" layoutY="386.0" mnemonicParsing="false" prefHeight="92.0" prefWidth="153.0" text="Button" />
             <Button fx:id="btnAyuda" layoutX="110.0" layoutY="595.0" mnemonicParsing="false" text="Soporte" />
