--- a/S&F-Hub/CodiFont/vista/PyS.fxml
+++ b/S&F-Hub/CodiFont/vista/PyS.fxml
@@ -17,7 +17,7 @@
             <Image url="@../../../../455GR.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="192.0" fitWidth="276.0" layoutX="24.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgPrincipal" fitHeight="171.0" fitWidth="169.0" layoutX="48.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../Bob'sBurguer.jpg" />
          </image>
@@ -28,9 +28,7 @@
          </font>
       </Label>
       <Label layoutX="422.0" layoutY="44.0" text="SINOPSIS" />
-      <TextArea layoutX="324.0" layoutY="71.0" prefHeight="172.0" prefWidth="247.0" />
       <Label layoutX="423.0" layoutY="262.0" text="REPARTO" />
-      <TextArea layoutX="324.0" layoutY="289.0" prefHeight="80.0" prefWidth="247.0" />
       <Label layoutX="19.0" layoutY="214.0" text="PLATAFORMAS" />
       <TextArea layoutX="24.0" layoutY="350.0" prefHeight="15.0" prefWidth="169.0" />
       <ComboBox layoutX="74.0" layoutY="277.0" prefWidth="150.0" />
@@ -72,6 +70,19 @@
       </ImageView>
       <Button fx:id="btnVolver" layoutX="690.0" layoutY="40.0" mnemonicParsing="false" text="Volver" />
       <Button fx:id="AñadirALista" layoutX="640.0" layoutY="94.0" mnemonicParsing="false" text="Añadir a MiLista" />
-      <Label layoutX="302.0" layoutY="32.0" text="Bob's Burguer" />
+      <Label fx:id="lblTitulo" alignment="CENTER" layoutX="221.0" layoutY="28.0" prefHeight="50.0" prefWidth="162.0" text="Bob's Burguer">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label fx:id="lblSinposis" alignment="TOP_LEFT" layoutX="326.0" layoutY="65.0" prefHeight="177.0" prefWidth="247.0" textAlignment="JUSTIFY">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblReparto" alignment="TOP_LEFT" layoutX="326.0" layoutY="302.0" prefHeight="94.0" prefWidth="247.0" textAlignment="JUSTIFY">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
