--- a/S&F-Hub/CodiFont/vista/buscadorSerie.fxml
+++ b/S&F-Hub/CodiFont/vista/buscadorSerie.fxml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -16,13 +14,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TableView fx:id="tableResuSeries" layoutX="14.0" layoutY="123.0" prefHeight="245.0" prefWidth="282.0">
-              <columns>
-                <TableColumn fx:id="idTitulo" prefWidth="140.0" text="Titulo" />
-                <TableColumn fx:id="idEnlace" prefWidth="141.0" text="Enlace" />
-              </columns>
-            </TableView>
-            <Button fx:id="btnBuscar" layoutX="209.0" layoutY="89.0" mnemonicParsing="false" text="Buscar" />
+            <ListView fx:id="lvSeriesB" layoutX="24.0" layoutY="94.0" prefHeight="305.0" prefWidth="262.0" />
          </children>
       </AnchorPane>
    </children>
